# Procurement_assistance

./: .gitignore  GEMINI.md  Makefile  README.md  claude_venv_packages.txt  commit_msg.txt  kunnskapsbase.csv  main.py  old_kunnskapsbase.numbers  oslomodell_chunks_final.json  pyproject.toml  refactoring_changelog.md  requirements.txt
_midl/: Oslomodell-agenten.md  claude_oslomodel_agent.py  enhanced_oslomodel_agent.py  real-world-example.py
_midl/procurement_documents/: oslomodell_239e8c55-03aa-480a-b915-a380ae296435_20250812_060629.md  oslomodell_b9cbdcfc-5cba-45f9-9e96-5bda0d306bc2_20250812_144427.md  (+1 more)
config/: oslomodell_config.yaml  protocol_config.yaml
data/: Instruks_oslomodellen_knowledge_20250819_112033.json  utdanningsprogram.csv
docs/: CHANGELOG.md
gateway/: main-kopi.py  main.py  requirements.txt  start_gateway.sh
scripts/: README sync_gateway_catalog.txt  clear_cache.py  complete_oslomodell_setup.sql  full_reset.sh  load-oslomodell-rpc.py  load_miljokrav_knowledge.py  load_oslomodell_knowledge_rpc.py  reset_gateway.py  sync-gateway-catalog.py  sync_gateway_catalog-kopi.py  sync_gateway_catalog.py
src/: enhanced_llm_gateway.py  main.py  reasoning_orchestrator.py
src/gateway/: main.py  (+1 more)
test_documents/: 20250808_185518_Konsulentbistand digitaliserin_oslomodell_notat.md
tests/: README.md  conftest.py  mock_procurement_generator.py  old_conftest.py  oslomodell_test_results_20250807_222933.json  test_document_generators.py  test_oslomodell_refactored.py  test_oslomodell_setup.py  test_reasoning_orchestrator_comprehensive.py
venv-py311/: pyvenv.cfg
(+119 files in other folders)
